Start name change
Get started with moving to make this a separate plugin including name change

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-name: EquivalencyTech
-version: ${project.version}
-main: io.github.sefiraat.equivalencytech.EquivalencyTech
-api-version: 1.16
+name: SlimeE
+version: 1.0
+main: io.github.thecyberquake.slimee.SlimeE
+api-version: 1.19
 softdepend:
   - Slimefun
   - Galactifun
