--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.sefiraat</groupId>
-    <artifactId>EquivalencyTech</artifactId>
-    <version>modified</version>
+    <groupId>io.github.thecyberquake</groupId>
+    <artifactId>SlimeE</artifactId>
+    <version>1.0</version>
 
     <build>
         <plugins>
@@ -161,12 +161,12 @@
         <dependency>
             <groupId>dev.triumphteam</groupId>
             <artifactId>triumph-gui</artifactId>
-            <version>3.1.1</version>
+            <version>3.1.4</version>
         </dependency>
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
