--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,6 +7,7 @@ EMC_VALUES:
   BURN_RATE: 0
   BASE:
     GRASS_BLOCK: 1
+    MOSS_BLOCK: 1
     DIRT: 1
     PODZOL: 1
     CRIMSON_NYLIUM: 1
@@ -21,6 +22,7 @@ EMC_VALUES:
     JUNGLE_SAPLING: 2
     ACACIA_SAPLING: 2
     DARK_OAK_SAPLING: 2
+    MANGROVE_PROPAGULE: 2
     SAND: 1
     RED_SAND: 1
     GRAVEL: 1
@@ -36,6 +38,7 @@ EMC_VALUES:
     DARK_OAK_LOG: 4
     CRIMSON_STEM: 4
     WARPED_STEM: 4
+    MANGROVE_LOG: 4
     STRIPPED_OAK_LOG: 4
     STRIPPED_SPRUCE_LOG: 4
     STRIPPED_BIRCH_LOG: 4
@@ -44,6 +47,7 @@ EMC_VALUES:
     STRIPPED_DARK_OAK_LOG: 4
     STRIPPED_CRIMSON_STEM: 4
     STRIPPED_WARPED_STEM: 4
+    STRIPPED_MANGROVE_LOG: 4
     STRIPPED_OAK_WOOD: 4
     STRIPPED_SPRUCE_WOOD: 4
     STRIPPED_BIRCH_WOOD: 4
@@ -52,6 +56,7 @@ EMC_VALUES:
     STRIPPED_DARK_OAK_WOOD: 4
     STRIPPED_CRIMSON_HYPHAE: 4
     STRIPPED_WARPED_HYPHAE: 4
+    STRIPPED_MANGROVE_WOOD: 4
     OAK_WOOD: 4
     SPRUCE_WOOD: 4
     BIRCH_WOOD: 4
@@ -60,12 +65,17 @@ EMC_VALUES:
     DARK_OAK_WOOD: 4
     CRIMSON_HYPHAE: 4
     WARPED_HYPHAE: 4
+    MANGROVE_WOOD: 4
     OAK_LEAVES: 1
     SPRUCE_LEAVES: 1
     BIRCH_LEAVES: 1
     JUNGLE_LEAVES: 1
     ACACIA_LEAVES: 1
     DARK_OAK_LEAVES: 1
+    AZALEA_LEAVES: 1
+    FLOWERING_AZALEA_LEAVES: 1
+    MANGROVE_LEAVES: 1
+    AZALEA: 8
     WET_SPONGE: 16
     LAPIS_ORE: 0
     COBWEB: 4
@@ -95,11 +105,14 @@ EMC_VALUES:
     WARPED_ROOTS: 2
     WEEPING_VINES: 2
     TWISTING_VINES: 2
+    MANGROVE_ROOTS: 4
+    MUD: 8
+    SCULK_SHRIEKER: 1024
+    SCULK_VEIN: 16
     SUGAR_CANE: 2
     KELP: 1
     BAMBOO: 1
     OBSIDIAN: 16
-    CHORUS_PLANT: 2
     CHORUS_FLOWER: 8
     DIAMOND_ORE: 0
     REDSTONE_ORE: 0
@@ -118,7 +131,7 @@ EMC_VALUES:
     MYCELIUM: 8
     LILY_PAD: 8
     END_STONE: 2
-    DRAGON_EGG: 16384
+    DRAGON_EGG: 32768
     EMERALD_ORE: 0
     NETHER_QUARTZ_ORE: 0
     SUNFLOWER: 2
@@ -160,9 +173,9 @@ EMC_VALUES:
     DEAD_HORN_CORAL_FAN: 8
     SCUTE: 32
     APPLE: 8
-    DIAMOND: 2048
-    IRON_INGOT: 64
-    GOLD_INGOT: 128
+    DIAMOND: 1028
+    IRON_INGOT: 32
+    GOLD_INGOT: 32
     NETHERITE_SCRAP: 4096
     STRING: 4
     FEATHER: 2
@@ -204,11 +217,11 @@ EMC_VALUES:
     POTATO: 2
     POISONOUS_POTATO: 8
     SKELETON_SKULL: 128
-    WITHER_SKELETON_SKULL: 128
+    WITHER_SKELETON_SKULL: 1024
     ZOMBIE_HEAD: 128
     CREEPER_HEAD: 128
-    DRAGON_HEAD: 1024
-    NETHER_STAR: 1024
+    DRAGON_HEAD: 24576
+    NETHER_STAR: 16384
     QUARTZ: 32
     PRISMARINE_SHARD: 8
     PRISMARINE_CRYSTALS: 16
@@ -223,7 +236,6 @@ EMC_VALUES:
     DRAGON_BREATH: 512
     ELYTRA: 0
     SHULKER_SHELL: 32
-    TRIDENT: 512
     PHANTOM_MEMBRANE: 16
     NAUTILUS_SHELL: 128
     HEART_OF_THE_SEA: 8192
@@ -237,13 +249,18 @@ EMC_VALUES:
     HONEY_BOTTLE: 1
     PLAYER_HEAD: 0
     RAW_IRON: 32
-    RAW_GOLD: 64
-    RAW_COPPER: 16
+    RAW_GOLD: 32
+    RAW_COPPER: 32
     COPPER_INGOT: 32
+    DEEPSLATE: 1
+    AMETHYST_SHARD: 16
+    ECHO_SHARD: 32
+    COBBLED_DEEPSLATE: 1
+    FROGSPAWN: 64
   SLIMEFUN:
     COPPER_DUST: 32
     IRON_DUST: 32
-    GOLD_DUST: 64
+    GOLD_DUST: 32
     TIN_DUST: 32
     MAGNESIUM_DUST: 32
     ZINC_DUST: 32
@@ -251,8 +268,9 @@ EMC_VALUES:
     SILVER_DUST: 32
     ALUMINUM_DUST: 32
     NETHER_ICE: 128
-    BUCKET_OF_OIL: 0
-    SIFTED_ORE: 0
+    BUCKET_OF_OIL: 512
+    SIFTED_ORE: 32
+    STONE_CHUNK: 1
     BASIC_CIRCUIT_BOARD: 1024
 MESSAGES:
   COMMAND_SUBCOMMAND: "Please select a valid sub command"
